# SWAP

./: .gitignore  LICENSE  README.md  meson.build  pixi.toml
.github/workflows/: build-library.yml  ci.yaml
src/: WC_K_models_04_11.f90  boundbottom.f90  boundtop.f90  calcgrid.f90  calcgwl.f90  convertdiscrvert.f90  cropgrowth.f90  description.fi  divdra.f90  drainage.f90  fluxes.f90  frozencond.f90  functions.f90  headcalc.f90  hysteresis.f90  initialize.f90  integral.f90  irrigation.f90  macropore.f90  macroporeoutput.f90  macrorate.f90  management_soil.f90  meteoday.f90  meteodt.f90  params.fi  penmon.f90  pyswap_interface.f90  readmeteo.f90  readswap.f90  rootextraction.f90  sharedexchange.f90  sharedsimulation.f90  soilwater.f90  solute.f90  sptabulated.f90  surfacewater.f90  swap.f90  swap_main.f90  swapoutput.f90  temperature.f90  (+7 more)
tests/cases/1.hupselbrook/: run_swap.cmd  run_swap.sh  swap_linux.swp.template
